# comfy-mobile-ui

./: .gitignore  LICENSE  README.md  README_KOR.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  tsx.config.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
comfy-mobile-ui-api-extension/: __init__.py  api.py  comfyui_detector.py  external_watchdog.py  pyproject.toml  requirements.txt  watchdog.py
comfy-mobile-ui-api-extension/handlers/: backup_handler.py  chain_handler.py  chain_progress_handler.py  download_handler.py  file_handler.py  lora_handler.py  manager_handler.py  model_handler.py  node_mapping_handler.py  snapshot_handler.py  system_handler.py  video_download_handler.py  widget_handler.py  workflow_handler.py
comfy-mobile-ui-api-extension/utils/: chain_executor.py  chain_progress_manager.py  chain_storage.py  download_video.py  file_utils.py  video_thumbnail.py
docs/: ComfyUI_Workflow_Conversion_Pipeline.md  ComfyUI_Workflow_Data_Structure.md  Mobile_UI_Design_Patterns.md
public/: cleanup-storage.html  emergency-recovery.html  manifest.json  test-migration.html
src/: App.tsx  index.css  main.tsx
src/config/: canvasConfig.ts
src/core/: index.ts
src/hooks/: useCanvasInteraction.ts  useCanvasRenderer.ts  useConnection.ts  useConnectionMode.ts  useFileOperations.ts  useMobileOptimizations.ts  useWebSocketConnection.ts  useWidgetValueEditor.ts  useWorkflowStorage.ts
src/infrastructure/: index.ts
src/services/: ConnectionService.ts  WatchdogService.ts  (+3 more)
tests/: test-config.json
(+153 files in other folders)
