[project]
name = "comfy-mobile-ui-api-extension"
version = "1.0.0"
description = "ComfyUI Extension for Mobile UI API endpoints"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfy_mobile_ui_api_extension"]

[tool.setuptools.package-dir]
comfy_mobile_ui_api_extension = "."